...
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="100dp"
        app:srcCompat="@mipmap/ic_launcher" />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/btnStadium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="Stadiums" />

    <android.support.v7.widget.AppCompatButton
...
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="map"
        tools:ignore="MissingConstraints" />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/btnAchievement"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="Achievements"/>

    <android.support.v7.widget.AppCompatButton
...
